--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Access denied</title>
+  <title>Google sign in</title>
 </head>
+
 <body>
-  <h1>Acceso denegado</h1>
+  <h1>Google sign in</h1>
+  <hr>
+
+  <div id="g_id_onload" 
+  data-client_id="1043944266232-tnupmu0vf13r2d80h9isn6n9400admho.apps.googleusercontent.com" 
+    data-auto_prompt="false"
+    data-callback="handleCredentialResponse"
+  >
+  </div>
+  <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with"
+    data-shape="rectangular" data-logo_alignment="left">
+  </div>
+
+
+  <button id="google_signout">
+    signout
+  </button>
+
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script>
+    function handleCredentialResponse(response) {
+       
+      console.log("id token", response.credential)
+      const body = {id_token: response.credential}
+      fetch("http://localhost:3031/api/auth/google", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify(body)
+      })
+      .then(res => res.json())
+      .then(res => {
+        console.log(res);
+        localStorage.setItem("email", res.user.email);
+      }).catch(
+        console.warn
+      )
+    }
+
+
+    const button = document.getElementById("google_signout");
+    button.onclick = () => {
+
+      google.accounts.id.revoke(localStorage.getItem("email"), done => {
+        localStorage.clear();
+        location.reload();
+      });
+
+    }
+
+  </script>
 </body>
+
 </html>
